@@ -49,3 +49,13 @@ plugin_enabled = BetterSignal(providing_args=["plugin", "project", "user"])
 email_verified = BetterSignal(providing_args=["email"])
 
 mocks_loaded = BetterSignal(providing_args=["project"])
+
+user_feedback_received = BetterSignal(providing_args=["project"])
+api_called = BetterSignal(providing_args=["project"])
+issue_assigned = BetterSignal(providing_args=["project", "group"])
+issue_resolved_in_release = BetterSignal(providing_args=["project"])
+advanced_search = BetterSignal(providing_args=["project"])
+save_search_created = BetterSignal(providing_args=["project"])
+inbound_filter_toggled = BetterSignal(providing_args=["project"])
+sso_enabled = BetterSignal(providing_args=["organization"])
+data_scrubber_enabled = BetterSignal(providing_args=["organization"])
