@@ -24,7 +24,7 @@ from sentry.coreapi import (
 )
 from sentry.models import Project, OrganizationOption, Organization
 from sentry.signals import (
-    event_accepted, event_dropped, event_filtered, event_received
+    event_accepted, event_dropped, event_filtered, event_received, api_called
 )
 from sentry.quotas.base import RateLimit
 from sentry.utils import json, metrics
@@ -239,6 +239,7 @@ class APIView(BaseView):
             else:
                 response['Access-Control-Allow-Origin'] = origin
 
+        api_called.send(project=project, sender=self)
         return response
 
     # XXX: backported from Django 1.5
